--- a/index.html
+++ b/index.html
@@ -1,45 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <div class="row">
+      <header class="header">
+        <h1 class="header__h1">Reliable, efficient delivery</h1>
+        <h1 class="header__h1--bold">Powered by Technology</h1>
+    </div>
+    <p class="header__txt">
+      Our Artificial Intelligence powered tools use millions of project data points
+      to ensure that your project is successful
     </p>
-  </footer>
+    </header>
+
+    <div class="row">
+      <section class="section bt-red">
+        <h2 class="section__h2">Supervisor</h2>
+        <p class="section__txt">Monitors activity to identify project roadblocks</p>
+        <img class="section__img" src="images/icon-supervisor.svg" alt="supervisor">
+      </section>
+    </div>
+
+    <div class="row">
+      <section class="section bt-cyan">
+        <h2 class="section__h2">Team Builder</h2>
+        <p class="section__txt">Scans our talent network to create the optimal team for your project</p>
+        <img class="section__img" src="images/icon-team-builder.svg" alt="team-builder">
+      </section>
+
+      <section class="section bt-orange">
+        <h2 class="section__h2">Karma</h2>
+        <p class="section__txt">Regularly evaluates our talent to ensure quality</p>
+        <img class="section__img" src="images/icon-karma.svg" alt="karma">
+      </section>
+    </div>
+
+    <div class="row">
+      <section class="section bt-blue">
+        <h2 class="section__h2">Calculator</h2>
+        <p class="section__txt">Uses data from past projects to provide better delivery estimates</p>
+        <img class="section__img" src="images/icon-calculator.svg" alt=calculatorr">
+      </section>
+    </div>
+
+
+    <footer class="footer">
+      <p class="footer__attr">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a><br>
+        Coded by <a href="#">MD</a>
+      </p>
+    </footer>
+
+  </div> <!-- *container -->
 </body>
+
 </html>
